--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "leaflet-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ahmedashfaq027.github.io/maps",
   "dependencies": {
+    "@react-leaflet/core": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^2.7.0",
+    "react-leaflet-draw": "^0.19.0",
+    "react-leaflet-easyprint": "^2.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
